2005-10-18  Mike Taylor <bear@code-bear.com>
  * ReadMe, Install
    Updated to mention VC_SVN

  * src/lib/TinderDB.pm
    Updated to include references to VC_SVN

  * src/lib/TinderDB/VC_SVN.pm
    New TinderDB code to gather SVN information for a given
    date/time for display in the "blame" column
  
2005-10-11  Mike Taylor <bear@code-bear.com>
  * configure
    applied patch to remove the spurious output from the xarg
    parameter check routine
    bug 294225 reported by Darren Tucker

2005-10-08  Mike Taylor <bear@code-bear.com>

  * ChangeLog
    removed release note text and put them into ReleaseNotes file

  * Todo
    added my Todo list

  * Contact
    removed tabs

  * ReadMe, Policies, Overview, Goals, Install
    edited to read in the third person.  Fixed typos, spelling
    and reformatted for readability

  * src/lib/Readme, src/bin/ReadMe
    edited to read in the third person.  Fixed typos, spelling
    and reformatted for readability. Updated to reflect current files

  * configure
    changed --prefix default to match what is in the Install notes

  * src/lib/TinderDB/VC_SVN.pm
    New TinderDB code to gather SVN information for a given
    date/time for display in the "blame" column


2005-10-06  Mike Taylor <bear@code-bear.com>

  * Contact
    added my contact info as co-maintainer

  * src/bin/tinder.cgi
    fixed minor spelling mistake s/Regnerate/Regenerate/
    bug 231057 reported by David Costanzo

  * src/lib/Summaries.pm
    fixed spelling error in generated html content s/BPRDER/BORDER/
    bug 230348 patch supplied by Todd Endicott
