@@ -9,9 +9,9 @@
 # query.  I would add these features into ViewCVS but I can not tell
 # if the project is abandoned or not.
 
-# $Revision: 1.1 $ 
-# $Date: 2003-12-23 13:04:00 $ 
-# $Author: kestes%walrus.com $ 
+# $Revision: 1.2 $ 
+# $Date: 2005-12-01 07:17:12 $ 
+# $Author: bear%code-bear.com $ 
 # $Source: /home/jrmuizel/cvs-mirror/mozilla/webtools/tinderbox2/src/lib/VCDisplay/ViewCVS.pm,v $ 
 # $Name:  $ 
 
@@ -53,13 +53,7 @@ package VCDisplay::ViewCVS;
 
 # Load Tinderbox libraries
 
-use lib '/home2/tbox/local_conf',
-   '/home2/tbox/default_conf',
-   '/home2/tbox/lib',
-   '/root/mozilla/webtools/tinderbox2/./build/local_conf',
-   '/root/mozilla/webtools/tinderbox2/./build/default_conf',
-   '/root/mozilla/webtools/tinderbox2/./build/lib';
-
+use lib '#tinder_libdir#';
 use HTMLPopUp;
 use TreeData;
 
